--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         <h1 id="title">What is the color?</h1>
     </header>
     <main>
-        <div>
-            <p id="rgb-color">rgb `(168, 34, 1)`</p>
+        <div class="container question">
+            <p id="rgb-color">Qual é a cor</p>
+        </div>
+        <div class="color container">
+            <div class="color-palette">                
+            </div>
         </div>
     </main>
 
