--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p id="rgb-color">Qual é a cor</p>
         </div>
         <div class="color container">
-            <div class="color-palette">                
+            <div id="color-palette">                
             </div>
         </div>
     </main>
