--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div id="color-palette">                
             </div>
         </div>
+        <div id="respota">
+            <p id="answer">Escolha uma cor</p>
+        </div>
     </main>
-
-
-
     <script src="./script.js"></script>
 </body>
 </html>
