--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
             <div id="color-palette">                
             </div>
         </div>
-        <div id="respota">
+        <div id="resposta">
             <p id="answer">Escolha uma cor</p>
+        </div>
+        <div id="buttons">
+            <button id="reset-game">Reset Game</button>
         </div>
     </main>
     <script src="./script.js"></script>
