Concluído requisito 7, finalizando projeto

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <div id="resposta">
             <p id="answer">Escolha uma cor</p>
         </div>
+        <div id="placar">
+            <p class="placares" id="acertos">Acertos: </p>
+            <p class="placares" id="score">0</p>
+        </div>
         <div id="buttons">
             <button id="reset-game">Reset Game</button>
         </div>
