Refatorando placar, adicionando erros

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
             <p id="answer">Escolha uma cor</p>
         </div>
         <div id="placar">
-            <p class="placares" id="acertos">Acertos: </p>
+            <p class="placares" >Acertos: </p>
             <p class="placares" id="score">0</p>
+        </div>
+        <div id="placar">
+            <p class="placares">Erros: </p>
+            <p class="placares" id="wrong">0</p>
         </div>
         <div id="buttons">
             <button id="reset-game">Reset Game</button>
